[gd_scene load_steps=3 format=3 uid="uid://bwer12t6vfkg1"]

[ext_resource type="Theme" uid="uid://u5qnpgxqykiv" path="res://UI/Themes/dark/theme.tres" id="1"]
[ext_resource type="Script" path="res://UI/Statusbar.gd" id="2"]

[node name="Statusbar" type="Panel"]
custom_minimum_size = Vector2(0, 24)
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 24.0
theme = ExtResource("1")
script = ExtResource("2")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_constants/margin_left = 10
theme_override_constants/margin_right = 10

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Left" type="HBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 0

[node name="PositionLabel" type="Label" parent="MarginContainer/HBoxContainer/Left"]
layout_mode = 2
text = "Position: -"

[node name="Sep" type="Label" parent="MarginContainer/HBoxContainer/Left"]
layout_mode = 2
text = "|"

[node name="ZoomLabel" type="Label" parent="MarginContainer/HBoxContainer/Left"]
layout_mode = 2
text = "Zoom: -"

[node name="Sep2" type="Label" parent="MarginContainer/HBoxContainer/Left"]
layout_mode = 2
text = "|"

[node name="PressureLabel" type="Label" parent="MarginContainer/HBoxContainer/Left"]
layout_mode = 2
text = "Pressure: -"

[node name="Sep3" type="Label" parent="MarginContainer/HBoxContainer/Left"]
layout_mode = 2
text = "|"

[node name="FpsLabel" type="Label" parent="MarginContainer/HBoxContainer/Left"]
layout_mode = 2
text = "FPS: -"

[node name="Right" type="HBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 0
alignment = 2

[node name="StrokesLabel" type="Label" parent="MarginContainer/HBoxContainer/Right"]
layout_mode = 2
text = "Strokes: 0"

[node name="Sep" type="Label" parent="MarginContainer/HBoxContainer/Right"]
layout_mode = 2
text = "|"

[node name="PointsLabel" type="Label" parent="MarginContainer/HBoxContainer/Right"]
layout_mode = 2
text = "Points: 0"
